Put labels to resource bundle

--- a/weemo-extension-webapp/src/main/resources/locale/portlet/videocall/Resource_en.properties
+++ b/weemo-extension-webapp/src/main/resources/locale/portlet/videocall/Resource_en.properties
@@ -67,3 +67,19 @@ exoplatform.videocall.makeCall=Make a video call
 exoplatform.videocall.user.notExist=does not exist.
 exoplatform.videocall.user.alreadyInList= is already on the list.
 exoplatform.videocall.permission.warningTitle=Warning
+exoplatform.videocall.action.accept=Accept
+exoplatform.videocall.action.decline=Decline
+exoplatform.videocall.incomming.message={0} is calling you
+exoplatform.videocall.connecting.message=Connecting...
+exoplatform.videocall.calling.message=Calling...
+exoplatform.videocall.busy.message={0} is busy
+exoplatform.videocall.callDrop.message=Call dropped
+exoplatform.videocall.action.close=Close
+exoplatform.videocall.action.call=Call
+exoplatform.videocall.noAnswer.message=No answer
+exoplatform.videocall.connectionLost.message=Connection Lost
+exoplatform.videocall.notInstall.message=You will need to install the plugin to enable video calls.
+exoplatform.videocall.action.downloadPlugin=Download the plugin
+exoplatform.videocall.notInstall.step1=Open the plugin
+exoplatform.videocall.notInstall.step2=Follow the instructions
+exoplatform.videocall.notInstall.step3=Enjoy Video Calls
