Resource bundle for title

--- a/weemo-extension-webapp/src/main/resources/locale/portlet/videocall/Resource_en.properties
+++ b/weemo-extension-webapp/src/main/resources/locale/portlet/videocall/Resource_en.properties
@@ -83,3 +83,4 @@ exoplatform.videocall.action.downloadPlugin=Download the plugin
 exoplatform.videocall.notInstall.step1=Open the plugin
 exoplatform.videocall.notInstall.step2=Follow the instructions
 exoplatform.videocall.notInstall.step3=Enjoy Video Calls
+exoplatform.videocall.popup.title=Video Call : {0}
