cs injection on 20161122-181826

--- a/weemo-extension-webapp/src/main/resources/locale/portlet/videocall/Resource_cs.properties
+++ b/weemo-extension-webapp/src/main/resources/locale/portlet/videocall/Resource_cs.properties
@@ -1,81 +1,81 @@
 exoplatform.videocall.installer.message=A browser plugin (RTCCplugin) must be installed on your computer to enable video calls.
-exoplatform.videocall.installer.download=Download Video Client
-exoplatform.videocall.installer.dismiss=Don't ask me again
-exoplatform.videocall.installer.close=Close
-exoplatform.videocall.administration.title=Video Calls Administration
-exoplatform.videocall.turnoff=Turn off Video Calls
-exoplatform.videocall.turnoff.help=By turning off Video Calls, call buttons will disappear and nobody will be able to place a video call.
-exoplatform.videocall.weemokey=SightCall Key
-exoplatform.videocall.passPhrase=Passphrase
-exoplatform.videocall.authId=Auth Id
-exoplatform.videocall.authSecret=Auth Secret
-exoplatform.videocall.p12Certificate=Customer Certificate
-exoplatform.videocall.pemCertificate=Common Certificate
-exoplatform.videocall.permissions=Permissions
-exoplatform.videocall.owner=Owner
-exoplatform.videocall.1_1profile=1 to 1 Calls
+exoplatform.videocall.installer.download=St\u00E1hnout Weemo
+exoplatform.videocall.installer.dismiss=Ji\u017E se p\u0159\u00ED\u0161t\u011B nedotazovat
+exoplatform.videocall.installer.close=Zav\u0159\u00EDt
+exoplatform.videocall.administration.title=Spr\u00E1va videohovor\u016F
+exoplatform.videocall.turnoff=Vypnout videohovory
+exoplatform.videocall.turnoff.help=Vypnut\u00EDm Videohovor\u016F,zmiz\u00ED tla\u010D\u00EDtka vol\u00E1n\u00ED a nikdo s V\u00E1mi nebude schopen zah\u00E1jit videohovor.
+exoplatform.videocall.weemokey=Weemo kl\u00ED\u010D
+exoplatform.videocall.passPhrase=P\u0159\u00EDstupov\u00E9 heslo
+exoplatform.videocall.authId=Ov\u011B\u0159ov\u00E1n\u00ED ID
+exoplatform.videocall.authSecret=Ov\u011B\u0159ov\u00E1n\u00ED tajemstv\u00ED
+exoplatform.videocall.p12Certificate=Certifik\u00E1t z\u00E1kazn\u00EDka
+exoplatform.videocall.pemCertificate=Spole\u010Dn\u00FD certifik\u00E1t
+exoplatform.videocall.permissions=Opr\u00E1vn\u011Bn\u00ED
+exoplatform.videocall.owner=Vlastn\u00EDk
+exoplatform.videocall.1_1profile=1:1 Hovory
 exoplatform.videocall.group_calls_profile=Group Calls
-exoplatform.videocall.action=Action
-exoplatform.videocall.action.add=Add Permission
-exoplatform.videocall.action.save=Save
-exoplatform.videocall.testWeemoConnection=Test Connection
-exoplatform.videocall.test.successMessage=Connected successfully to SightCall service.
-exoplatform.videocall.test.errorMessage=Failed to connect to SightCall service.
-exoplatform.videocall.test.alert=Alert
-exoplatform.videocall.test.err=Error
-exoplatform.videocall.test.errs=Errors
-exoplatform.videocall.save.message=Your settings have been applied.
-exoplatform.videocall.save.error=is mandatory.
+exoplatform.videocall.action=Akce
+exoplatform.videocall.action.add=P\u0159idat opr\u00E1vn\u011Bn\u00ED
+exoplatform.videocall.action.save=Ulo\u017Eit
+exoplatform.videocall.testWeemoConnection=Test Weemo spojen\u00ED
+exoplatform.videocall.test.successMessage=\u00DAsp\u011B\u0161n\u011B p\u0159ipojeno k Weemo
+exoplatform.videocall.test.errorMessage=Nepoda\u0159ilo se p\u0159ipojit k Weemo.
+exoplatform.videocall.test.alert=Upozorn\u011Bn\u00ED
+exoplatform.videocall.test.err=Chyba
+exoplatform.videocall.test.errs=Chyby
+exoplatform.videocall.save.message=Va\u0161e nastaven\u00ED bylo pou\u017Eito.
+exoplatform.videocall.save.error=je povinn\u00E9.
 exoplatform.videocall.permissions.empty.message=
-exoplatform.videocall.permissions.empty.alertMessage=Please check at least one user.
-exoplatform.videocall.administration.deleteConfirm=Are you sure you want to delete permissions for
-exoplatform.videocall.permissions.title=Not Authorized
-exoplatform.videocall.permissions.message=Sorry, you are not allowed to place this video call.
+exoplatform.videocall.permissions.empty.alertMessage=Za\u0161krtn\u011Bte pros\u00EDm alespo\u0148 jednoho u\u017Eivatele.
+exoplatform.videocall.administration.deleteConfirm=Jste si jisti,\u017Ee chcete odstranit opr\u00E1vn\u011Bn\u00ED pro
+exoplatform.videocall.permissions.title=Neopr\u00E1vn\u011Bn\u00FD p\u0159\u00EDstup
+exoplatform.videocall.permissions.message=Promi\u0148te,nejste opr\u00E1vn\u011Bni zah\u00E1jit tento videohovor.
 exoplatform.videocall.permissions.message.receiving.user=Sorry, {0} is not allowed to receive video calls.
-exoplatform.videocall.permissions.okButton=OK
-exoplatform.videocall.installKey.title=SightCall Key Required
-exoplatform.videocall.installKey.message=An administrator must install a SightCall key to activate this feature.
-exoplatform.videocall.installKey.learnMoreButton=Learn More
-exoplatform.videocall.installKey.cancelButton=Cancel
-exoplatform.videocall.administration.name=User Name
-exoplatform.videocall.administration.lastName=Last Name
-exoplatform.videocall.administration.firstName=First Name
-exoplatform.videocall.administration.email=Email
-exoplatform.videocall.administration.close=Close
-exoplatform.videocall.administration.upLevel=Up Level
-exoplatform.videocall.administration.deleteConfirmTitle=Delete Confirmation
-exoplatform.videocall.administration.confirmYes=Yes
-exoplatform.videocall.administration.confirmNo=No
-exoplatform.videocall.administration.selectUser=Select User
-exoplatform.videocall.administration.selectGroup=Select Group
-exoplatform.videocall.administration.selectChildGroup=Select Child Group
-exoplatform.videocall.administration.selectThisGroup=Select this Group
-exoplatform.videocall.administration.userSelector=User Selector
-exoplatform.videocall.administration.groupSelector=Select a group
-exoplatform.videocall.administration.input.hint=Select User or Group
-exoplatform.videocall.administration.add=Add
-exoplatform.videocall.administration.upload=Upload
-exoplatform.videocall.administration.noFile=No file selected
-exoplatform.videocall.administration.delete=Delete
-exoplatform.videocall.administration.quickSearch=Quick Search
-exoplatform.videocall.administration.search=Search
-exoplatform.videocall.administration.swither.yes=YES
-exoplatform.videocall.administration.swither.no=NO
-exoplatform.videocall.administration.permission.in=in
-exoplatform.videocall.Call=Call
-exoplatform.videocall.makeCall=Make a video call
-exoplatform.videocall.user.notExist=does not exist.
-exoplatform.videocall.user.alreadyInList=is already on the list.
-exoplatform.videocall.permission.warningTitle=Warning
-exoplatform.videocall.action.accept=Accept
-exoplatform.videocall.action.decline=Decline
+exoplatform.videocall.permissions.okButton=Ok
+exoplatform.videocall.installKey.title=Po\u017Eadov\u00E1n kl\u00ED\u010D Weemo
+exoplatform.videocall.installKey.message=K aktivaci t\u00E9to funkce mus\u00ED spr\u00E1vce nainstalovat kl\u00ED\u010D Weemo.
+exoplatform.videocall.installKey.learnMoreButton=Zjistit v\u00EDce
+exoplatform.videocall.installKey.cancelButton=Storno
+exoplatform.videocall.administration.name=U\u017Eivatelsk\u00E9 jm\u00E9no
+exoplatform.videocall.administration.lastName=P\u0159\u00EDjmen\u00ED
+exoplatform.videocall.administration.firstName=K\u0159estn\u00ED jm\u00E9no
+exoplatform.videocall.administration.email=E-mail
+exoplatform.videocall.administration.close=Zav\u0159\u00EDt
+exoplatform.videocall.administration.upLevel=O \u00FArove\u0148 v\u00FD\u0161
+exoplatform.videocall.administration.deleteConfirmTitle=Potvrzen\u00ED odstran\u011Bn\u00ED
+exoplatform.videocall.administration.confirmYes=Ano
+exoplatform.videocall.administration.confirmNo=Ne
+exoplatform.videocall.administration.selectUser=Vybrat u\u017Eivatele
+exoplatform.videocall.administration.selectGroup=Vybrat skupinu
+exoplatform.videocall.administration.selectChildGroup=Vybrat podskupinu
+exoplatform.videocall.administration.selectThisGroup=Vybrat tuto skupinu
+exoplatform.videocall.administration.userSelector=V\u00FDb\u011Br u\u017Eivatele
+exoplatform.videocall.administration.groupSelector=Vybrat skupinu
+exoplatform.videocall.administration.input.hint=Vybrat u\u017Eivatele nebo skupinu
+exoplatform.videocall.administration.add=P\u0159idat
+exoplatform.videocall.administration.upload=Nahr\u00E1t
+exoplatform.videocall.administration.noFile=Nebyl vybr\u00E1n \u017E\u00E1dn\u00FD soubor
+exoplatform.videocall.administration.delete=Odstranit
+exoplatform.videocall.administration.quickSearch=Rychl\u00E9 vyhled\u00E1v\u00E1n\u00ED
+exoplatform.videocall.administration.search=Hledat
+exoplatform.videocall.administration.swither.yes=Ano
+exoplatform.videocall.administration.swither.no=Ne
+exoplatform.videocall.administration.permission.in=v
+exoplatform.videocall.Call=Hovor
+exoplatform.videocall.makeCall=Zah\u00E1jit videohovor
+exoplatform.videocall.user.notExist=neexistuje.
+exoplatform.videocall.user.alreadyInList=je ji\u017E na seznamu.
+exoplatform.videocall.permission.warningTitle=Varov\u00E1n\u00ED
+exoplatform.videocall.action.accept=P\u0159ijmout
+exoplatform.videocall.action.decline=Odm\u00EDtnout
 exoplatform.videocall.incomming.message={0} is calling you
 exoplatform.videocall.connecting.message=Connecting...
 exoplatform.videocall.calling.message=Calling...
 exoplatform.videocall.busy.message={0} is busy
 exoplatform.videocall.callDrop.message=Call dropped
 exoplatform.videocall.action.close=Close
-exoplatform.videocall.action.call=Call
+exoplatform.videocall.action.call=Hovor
 exoplatform.videocall.noAnswer.message=No response
 exoplatform.videocall.connectionLost.message=Connection lost
 exoplatform.videocall.notInstall.message=You will need to install the plugin to enable video calls.
